[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/ThaleahFat.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Code/GUI/GUI.gd" type="Script" id=2]
[ext_resource path="res://Placeholders/2D/flor.png" type="Texture" id=3]
[ext_resource path="res://Placeholders/2D/guineapig.png" type="Texture" id=4]
[ext_resource path="res://Fonts/placeholder.tres" type="DynamicFont" id=5]

[sub_resource type="DynamicFont" id=1]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 1 )

[node name="GUI" type="Node2D"]
script = ExtResource( 2 )

[node name="combolabel" type="HBoxContainer" parent="."]
margin_left = 15.4611
margin_top = 102.081
margin_right = 127.461
margin_bottom = 157.081
__meta__ = {
"_edit_use_anchors_": false
}

[node name="COMBO" type="Label" parent="combolabel"]
margin_right = 30.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.498039, 0.847059, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0196078, 0.0156863, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.0431373, 0.337255, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="combolabel"]
margin_left = 34.0
margin_right = 112.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.498039, 0.796078, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.0156863, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.0352941, 0.368627, 1 )
text = "HIT!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="guineacombo" type="HBoxContainer" parent="."]
margin_left = 873.175
margin_top = 132.353
margin_right = 1004.18
margin_bottom = 187.353
__meta__ = {
"_edit_use_anchors_": false
}

[node name="COMBO" type="Label" parent="guineacombo"]
margin_right = 30.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.498039, 0.847059, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0196078, 0.0156863, 0.286275, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.0431373, 0.337255, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="guineacombo"]
margin_left = 34.0
margin_right = 131.0
margin_bottom = 55.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.498039, 0.796078, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0313726, 0.0156863, 0.301961, 1 )
custom_colors/font_color_shadow = Color( 0.00784314, 0.0352941, 0.368627, 1 )
text = "cuy!"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ComboTimer" type="Timer" parent="."]
one_shot = true

[node name="HarvestedLabel" type="Label" parent="."]
margin_left = 11.6681
margin_top = 158.261
margin_right = 260.668
margin_bottom = 205.261
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0.6, 0.129412, 0.0196078, 1 )
custom_colors/font_color_shadow = Color( 0.341176, 0.00392157, 0.00392157, 1 )
text = "HARVESTED!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Harvested" type="Timer" parent="."]
one_shot = true

[node name="LEFT" type="HBoxContainer" parent="."]
margin_left = 28.3162
margin_top = 532.345
margin_right = 132.316
margin_bottom = 597.345
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="Label" parent="LEFT"]
margin_top = 9.0
margin_right = 25.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9"

[node name="LEFTtext" type="Label" parent="LEFT"]
margin_left = 29.0
margin_top = 9.0
margin_right = 126.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "LEFT"

[node name="COOKIES" type="HBoxContainer" parent="."]
margin_left = 27.127
margin_top = 497.858
margin_right = 153.127
margin_bottom = 562.858
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LEFT" type="Label" parent="COOKIES"]
margin_top = 9.0
margin_right = 25.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "9"

[node name="LEFTtext" type="Label" parent="COOKIES"]
margin_left = 29.0
margin_top = 9.0
margin_right = 301.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "cookies left"

[node name="guineapig" type="Sprite" parent="."]
position = Vector2( 952.96, 64.6819 )
texture = ExtResource( 4 )

[node name="GuineaPoints" type="Label" parent="guineapig"]
margin_left = -93.0811
margin_top = 18.1219
margin_right = -53.0815
margin_bottom = 73.1219
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0, 0.0196078, 0.25098, 1 )
custom_colors/font_color_shadow = Color( 0.00392157, 0.0431373, 0.227451, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="flor" type="Sprite" parent="."]
position = Vector2( 44.7316, 56.7051 )
scale = Vector2( 0.748301, 0.62245 )
texture = ExtResource( 3 )

[node name="FlorPoints" type="Label" parent="flor"]
margin_left = 71.6908
margin_top = 27.3497
margin_right = 111.691
margin_bottom = 82.3497
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_outline_modulate = Color( 0.0117647, 0.00392157, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0.0352941, 0.00392157, 0.235294, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GuineaComboTimer" type="Timer" parent="."]

[node name="ResetVeggies" type="Timer" parent="."]

[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
[connection signal="timeout" from="Harvested" to="." method="_on_Harvested_timeout"]
[connection signal="timeout" from="GuineaComboTimer" to="." method="_on_GuineaComboTimer_timeout"]
[connection signal="timeout" from="ResetVeggies" to="." method="_on_ResetVeggies_timeout"]
